--- a/homelab/extra-manifests/longhorn.yaml
+++ b/homelab/extra-manifests/longhorn.yaml
@@ -4,10 +4,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: longhorn-system
-  labels:
-    pod-security.kubernetes.io/enforce: privileged
-    pod-security.kubernetes.io/audit: privileged
-    pod-security.kubernetes.io/warn: privileged  
 ---
 # Source: longhorn/templates/priorityclass.yaml
 apiVersion: scheduling.k8s.io/v1
@@ -4953,7 +4949,7 @@ spec:
         image: longhornio/longhorn-manager:v1.8.1
         imagePullPolicy: IfNotPresent
         securityContext:
-          privileged: false
+          privileged: true
         command:
         - longhorn-manager
         - -d
