--- a/homelab/extra-manifests/longhorn.yaml
+++ b/homelab/extra-manifests/longhorn.yaml
@@ -4,6 +4,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: longhorn-system
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
 ---
 # Source: longhorn/templates/priorityclass.yaml
 apiVersion: scheduling.k8s.io/v1
