--- a/homelab/extra-manifests/ip-pool.yml
+++ b/homelab/extra-manifests/ip-pool.yml
@@ -1,9 +1,10 @@
 apiVersion: "cilium.io/v2alpha1"
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: "lan-home-pool"
+  name: "lan-homelab-pool"
   namespace: kube-system
 spec:
   blocks:
   - start: "192.168.0.200"
     stop: "192.168.0.250"
+
