--- a/manifests/install-cilium.yaml
+++ b/manifests/install-cilium.yaml
@@ -1101,7 +1101,7 @@ spec:
           mountPath: /tmp
       initContainers:
       - name: config
-        image: "quay.io/cilium/cilium:v1.17.1"
+        image: "quay.io/cilium/cilium:stable"
         imagePullPolicy: IfNotPresent
         command:
         - cilium-dbg
@@ -1129,7 +1129,7 @@ spec:
       # from a privileged container because the mount propagation bidirectional
       # only works from privileged containers.
       - name: mount-bpf-fs
-        image: "quay.io/cilium/cilium:v1.17.1"
+        image: "quay.io/cilium/cilium:stable"
         imagePullPolicy: IfNotPresent
         args:
         - 'mount | grep "/sys/fs/bpf type bpf" || mount -t bpf bpf /sys/fs/bpf'
@@ -1145,7 +1145,7 @@ spec:
           mountPath: /sys/fs/bpf
           mountPropagation: Bidirectional
       - name: clean-cilium-state
-        image: "quay.io/cilium/cilium:v1.17.1"
+        image: "quay.io/cilium/cilium:stable"
         imagePullPolicy: IfNotPresent
         command:
         - /init-container.sh
@@ -1195,7 +1195,7 @@ spec:
           mountPath: /var/run/cilium # wait-for-kube-proxy
       # Install the CNI binaries in an InitContainer so we don't have a writable host mount in the agent
       - name: install-cni-binaries
-        image: "quay.io/cilium/cilium:v1.17.1"
+        image: "quay.io/cilium/cilium:stable"
         imagePullPolicy: IfNotPresent
         command:
           - "/install-plugin.sh"
@@ -1358,7 +1358,7 @@ spec:
     spec:
       containers:
       - name: cilium-operator
-        image: "quay.io/cilium/operator-generic:v1.15.0@sha256:e26ecd316e742e4c8aa1e302ba8b577c2d37d114583d6c4cdd2b638493546a79"
+        image: "quay.io/cilium/operator-generic:stable"
         imagePullPolicy: IfNotPresent
         command:
         - cilium-operator-generic
