--- a/patches/k8s-node-4-patch.yaml
+++ b/patches/k8s-node-4-patch.yaml
@@ -1,9 +1,11 @@
-storage:
-  disks:
-    - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100885
-      partitions:
-        - size: 100%
-          filesystem:
-            filesystemType: ext4
-            mountPoint: /var/mnt/sda
+kind: MachineConfig
+spec:
+  storage:
+    disks:
+      - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100885
+        partitions:
+          - size: 100%
+            filesystem:
+              filesystemType: ext4
+              mountPoint: /var/mnt/sda
 
