--- a/patches/k8s-node-4-patch.yaml
+++ b/patches/k8s-node-4-patch.yaml
@@ -1,6 +1,6 @@
 machine:
     disks:
-        - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100885 # The name of the disk to use.
+        - device: /dev/sda # The name of the disk to use.
           # A list of partitions to create on the disk.
           partitions:
             - mountpoint: /var/mnt/sda # Where to mount the partition.
