--- a/template.yaml
+++ b/template.yaml
@@ -24,8 +24,8 @@ patches:
     file: patches/extraManifests.yml
   - name: metric-server
     file: patches/metrics-server.yml
-#  - name: extraMounts for Longhorn
-#    file: patches/longhorn-extra-mounts.yml
+  - name: extraMounts for Longhorn
+    file: patches/longhorn-extra-mounts.yml
   - name: node-0-disk-sda
     file: patches/k8s-node-0-patch.yaml
   - name: node-1-disk-sda
