--- a/patches/k8s-node-0-patch.yaml
+++ b/patches/k8s-node-0-patch.yaml
@@ -10,6 +10,7 @@ machine:
           - rw
  
   disks:
-      - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100803 # The name of the disk to use.
+      - device: /dev/disk/by-id/TPBF2409110020100803 # The name of the disk to use.
+#      - device: /dev/sda1 # The name of the disk to use.      
         partitions:
           - mountpoint: /var/mnt/storage # Where to mount the partition.              
