--- a/template.yaml
+++ b/template.yaml
@@ -26,6 +26,9 @@ patches:
     file: patches/metrics-server.yml
   - name: extraMounts for Longhorn
     file: patches/longhorn-extra-mounts.yml
+  
+# patches: currently commented out becuase disk are not mounted after applying patches
+
   # - name: node-0-disk-sda
   #   file: patches/k8s-node-0-patch.yaml
   # - name: node-1-disk-sda
