--- a/patches/k8s-node-3-patch.yaml
+++ b/patches/k8s-node-3-patch.yaml
@@ -1,15 +1,15 @@
 machine:
   kubelet:
-    extraMounts:
-      - destination: /var/mnt/storage
-        type: bind
-        source: /var/mnt/storage
-        options:
-          - bind
-          - rshared
-          - rw
+    # extraMounts:
+    #   - destination: /var/mnt/storage
+    #     type: bind
+    #     source: /var/mnt/storage
+    #     options:
+    #       - bind
+    #       - rshared
+    #       - rw
  
   disks:
       - device: /dev/disk/by-id/ata-SAMSUNG_MZ7LM960HMJP-00003_S3LHNX0HC02413 # The name of the disk to use.
         partitions:
-          - mountpoint: /var/mnt/storage # Where to mount the partition.   
+          - mountpoint: /var/lib/longhorn # Where to mount the partition.   
