--- a/patches/k8s-node-0-patch.yaml
+++ b/patches/k8s-node-0-patch.yaml
@@ -1,13 +1,13 @@
 machine:
   kubelet:
-    # extraMounts:
-    #   - destination: /var/mnt/storage
-    #     type: bind
-    #     source: /var/mnt/storage
-    #     options:
-    #       - bind
-    #       - rshared
-    #       - rw
+    extraMounts:
+      - destination: /var/lib/longhorn
+        type: bind
+        source: /var/lib/longhorn
+        options:
+          - bind
+          - rshared
+          - rw
  
   disks:
       - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100803 # The name of the disk to use.
