--- a/template.yaml
+++ b/template.yaml
@@ -7,7 +7,7 @@ labels:
 kubernetes:
   version: v1.32.2
 talos:
-  version: v1.9.4
+  version: v1.10.0-alpha.2
 features:
   enableWorkloadProxy: true
   
