--- a/template.yaml
+++ b/template.yaml
@@ -36,8 +36,8 @@ patches:
   #   file: patches/k8s-node-3-patch.yaml
   # - name: node-4-disk-sda
   #   file: patches/k8s-node-4-patch.yaml
-  # - name: node-5-disk-sda
-  #   file: patches/k8s-node-5-patch.yaml
+  - name: node-5-disk-sda
+    file: patches/k8s-node-5-patch.yaml
 
 systemExtensions:
   - siderolabs/iscsi-tools
