--- a/patches/k8s-node-3-patch.yaml
+++ b/patches/k8s-node-3-patch.yaml
@@ -1,15 +1,25 @@
-machine:
-  kubelet:
-    # extraMounts:
-    #   - destination: /var/mnt/storage
-    #     type: bind
-    #     source: /var/mnt/storage
-    #     options:
-    #       - bind
-    #       - rshared
-    #       - rw
- 
-  disks:
-      - device: /dev/disk/by-id/ata-SAMSUNG_MZ7LM960HMJP-00003_S3LHNX0HC02413 # The name of the disk to use.
-        partitions:
-          - mountpoint: /var/lib/longhorn # Where to mount the partition.   
+metadata:
+    namespace: default
+    type: ConfigPatches.omni.sidero.dev
+    id: 500-8ce48d54-fb54-433f-baa6-5eac939f9f45
+    labels:
+        omni.sidero.dev/machine: 6680f42c-8187-0cac-dc4c-4f836fe99873
+    annotations:
+        description: add 1 TB sda disk
+        name: adddisk
+spec:
+  data: |
+    machine:
+      kubelet:
+        extraMounts:
+          - destination: /var/mnt/storage
+            type: bind
+            source: /var/mnt/storage
+            options:
+              - bind
+              - rshared
+              - rw
+      disks:
+          - device: /dev/disk/by-id/ata-SAMSUNG_MZ7LM960HMJP-00003_S3LHNX0HC02413 # The name of the disk to use.
+            partitions:
+              - mountpoint: /var/mnt/storage # Where to mount the partition.
