--- a/template.yaml
+++ b/template.yaml
@@ -26,34 +26,49 @@ patches:
     file: patches/metrics-server.yml
   # - name: extraMounts for Longhorn
   #   file: patches/longhorn-extra-mounts.yml
-  # - name: node-0-disk-sda
-  #   file: patches/k8s-node-0-patch.yaml
-  # - name: node-1-disk-sda
-  #   file: patches/k8s-node-1-patch.yaml
-  # - name: node-2-disk-sda
-  #   file: patches/k8s-node-2-patch.yaml
-  # - name: node-3-disk-sda
-  #   file: patches/k8s-node-3-patch.yaml
-  # - name: node-4-disk-sda
-  #   file: patches/k8s-node-4-patch.yaml
-  # - name: node-5-disk-sda
-  #   file: patches/k8s-node-5-patch.yaml  
+  - name: node-0-disk-sda
+    file: patches/k8s-node-0-patch.yaml
+  - name: node-1-disk-sda
+    file: patches/k8s-node-1-patch.yaml
+  - name: node-2-disk-sda
+    file: patches/k8s-node-2-patch.yaml
+  - name: node-3-disk-sda
+    file: patches/k8s-node-3-patch.yaml
+  - name: node-4-disk-sda
+    file: patches/k8s-node-4-patch.yaml
+  - name: node-5-disk-sda
+    file: patches/k8s-node-5-patch.yaml  
 
 systemExtensions:
   - siderolabs/iscsi-tools
   - siderolabs/util-linux-tools
 ---
-kind: Workers
-name: workers
-labels:
-  type: worker
-machineClass:
-  name: k8s-talos-cluster-workers
-  size: unlimited
----
 kind: ControlPlane
-labels:
-  type: control-plane
-machineClass:
-  name: k8s-talos-cluster-controlplane
-  size: 3
+machines:
+  - 5b7675ab-9294-23a3-0f18-742476129205
+  - c12b8cf7-6e73-24c9-308b-3c6689f59028
+  - fa99331d-c64b-42c0-878e-5497be58bf7f
+---
+kind: Workers
+machines:
+  - 5aa03ceb-d97e-6b59-d293-9c1708fadaa8
+  - 6680f42c-8187-0cac-dc4c-4f836fe99873
+  - 8ce140e0-700a-6760-eb28-274c903327ef
+---
+kind: Machine
+name: 5aa03ceb-d97e-6b59-d293-9c1708fadaa8
+---
+kind: Machine
+name: 5b7675ab-9294-23a3-0f18-742476129205
+---
+kind: Machine
+name: 6680f42c-8187-0cac-dc4c-4f836fe99873
+---
+kind: Machine
+name: 8ce140e0-700a-6760-eb28-274c903327ef
+---
+kind: Machine
+name: c12b8cf7-6e73-24c9-308b-3c6689f59028
+---
+kind: Machine
+name: fa99331d-c64b-42c0-878e-5497be58bf7f
