--- a/template.yaml
+++ b/template.yaml
@@ -26,18 +26,18 @@ patches:
     file: patches/metrics-server.yml
   # - name: extraMounts for Longhorn
   #   file: patches/longhorn-extra-mounts.yml
-  - name: node-0-disk-sda
-    file: patches/k8s-node-0-patch.yaml
-  - name: node-1-disk-sda
-    file: patches/k8s-node-1-patch.yaml
-  - name: node-2-disk-sda
-    file: patches/k8s-node-2-patch.yaml
-  - name: node-3-disk-sda
-    file: patches/k8s-node-3-patch.yaml
-  - name: node-4-disk-sda
-    file: patches/k8s-node-4-patch.yaml
-  - name: node-5-disk-sda
-    file: patches/k8s-node-5-patch.yaml  
+  # - name: node-0-disk-sda
+  #   file: patches/k8s-node-0-patch.yaml
+  # - name: node-1-disk-sda
+  #   file: patches/k8s-node-1-patch.yaml
+  # - name: node-2-disk-sda
+  #   file: patches/k8s-node-2-patch.yaml
+  # - name: node-3-disk-sda
+  #   file: patches/k8s-node-3-patch.yaml
+  # - name: node-4-disk-sda
+  #   file: patches/k8s-node-4-patch.yaml
+  # - name: node-5-disk-sda
+  #   file: patches/k8s-node-5-patch.yaml  
 
 systemExtensions:
   - siderolabs/iscsi-tools
