--- a/homelab/extra-manifests/longhorn.yaml
+++ b/homelab/extra-manifests/longhorn.yaml
@@ -4833,6 +4833,7 @@ metadata:
     app: longhorn-manager
   name: longhorn-backend
   namespace: longhorn-system
+
 spec:
   type: ClusterIP
   selector:
@@ -4853,6 +4854,9 @@ metadata:
     app: longhorn-ui
   name: longhorn-frontend
   namespace: longhorn-system
+  annotations:
+    omni-kube-service-exposer.sidero.dev/port: "59999"
+    omni-kube-service-exposer.sidero.dev/label: Longhorn Manager  
 spec:
   type: ClusterIP
   selector:
