--- a/k8s-cluster-template.yaml
+++ b/k8s-cluster-template.yaml
@@ -1,3 +1,6 @@
+# Apply the following command to create the cluster
+# omnictl cluster template sync --file k8s-cluster-template.yaml
+---
 kind: Cluster
 systemExtensions:
   - siderolabs/iscsi-tools
