--- a/homelab/extra-manifests/components.yaml
+++ b/homelab/extra-manifests/components.yaml
@@ -163,6 +163,9 @@ spec:
           requests:
             cpu: 100m
             memory: 200Mi
+          limits:
+            cpu: 200m
+            memory: 400Mi
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
