--- a/k8s-cluster-template.yaml
+++ b/k8s-cluster-template.yaml
@@ -5,6 +5,7 @@ kind: Cluster
 systemExtensions:
   - siderolabs/iscsi-tools
   - siderolabs/util-linux-tools
+#  - siderolabs/cloudflared  
 name: k8s-talos-cluster
 labels:
   cni: none
