--- a/patches/machine-patches.yaml
+++ b/patches/machine-patches.yaml
@@ -5,32 +5,32 @@
 # This is a machine patch that adds a disk to k8s-node-0.
 # The patch is applied to the machine with the label omni.sidero.dev/machine: c12b8cf7-6e73-24c9-308b-3c6689f59028
 
-metadata:
-    namespace: default
-    type: ConfigPatches.omni.sidero.dev
-    id: 500-39d1e867-0ae1-483b-8c76-d6742edd3146
-    labels:
-        omni.sidero.dev/machine: c12b8cf7-6e73-24c9-308b-3c6689f59028
-    annotations:
-        description: add 1 TB sda disk
-        name: adddisk
-spec:
-  data: |
-    machine:
-      kubelet:
-        extraMounts:
-          - destination: /var/mnt/storage
-            type: bind
-            source: /var/mnt/storage
-            options:
-              - bind
-              - rshared
-              - rw
-      disks:
-          - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100803 # The name of the disk to use.
-            partitions:
-              - mountpoint: /var/mnt/storage # Where to mount the partition.
----
+# metadata:
+#     namespace: default
+#     type: ConfigPatches.omni.sidero.dev
+#     id: 500-39d1e867-0ae1-483b-8c76-d6742edd3146
+#     labels:
+#         omni.sidero.dev/machine: c12b8cf7-6e73-24c9-308b-3c6689f59028
+#     annotations:
+#         description: add 1 TB sda disk
+#         name: adddisk
+# spec:
+#   data: |
+#     machine:
+#       kubelet:
+#         extraMounts:
+#           - destination: /var/mnt/storage
+#             type: bind
+#             source: /var/mnt/storage
+#             options:
+#               - bind
+#               - rshared
+#               - rw
+#       disks:
+#           - device: /dev/disk/by-id/ata-TEAM_T2531TB_TPBF2409110020100803 # The name of the disk to use.
+#             partitions:
+#               - mountpoint: /var/mnt/storage # Where to mount the partition.
+# ---
 # This is a machine patch that adds a disk to k8s-node-1.
 # The patch is applied to the machine with the label omni.sidero.dev/machine: 5b7675ab-9294-23a3-0f18-742476129205
 
