--- a/patches/vip-k8s-node-5.yaml
+++ b/patches/vip-k8s-node-5.yaml
@@ -1,15 +1,15 @@
-# Apply this path using omnictl apply -f vip-k8s-node-2.yaml
+# Apply this path using omnictl apply -f vip-k8s-node-5.yaml
 # Optain the patch with omnictl get -o yaml configpatch <UUID of Patch in omni dashboard> > outputpatch.yaml
----
+
 metadata:
     namespace: default
     type: ConfigPatches.omni.sidero.dev
-    id: 500-1b920f3b-b325-4f7f-8078-8b6480308eff
+    id: 500-d62eae71-3c4b-42dc-a33a-359aa5ffd1c1
     labels:
-        omni.sidero.dev/machine: fa99331d-c64b-42c0-878e-5497be58bf7f
+        omni.sidero.dev/machine: 8ce140e0-700a-6760-eb28-274c903327ef
     annotations:
-        description: add vip ip address
-        name: vip
+        description: add vip to ControlPlane node
+        name: add vip
 spec:
     data: |-
         machine:
