--- a/patches/vip-k8s-node-1.yaml
+++ b/patches/vip-k8s-node-1.yaml
@@ -20,4 +20,4 @@ spec:
                 dhcp: true
                 vip:
                   ip: 192.168.1.216
-#    compresseddata: []
+    compresseddata: []
