--- a/patches/vip-k8s-node-4.yaml
+++ b/patches/vip-k8s-node-4.yaml
@@ -6,7 +6,7 @@ metadata:
     type: ConfigPatches.omni.sidero.dev
     id: 500-84cb4d12-4bf3-4e77-b283-e62dfe51fbbb
     labels:
-        omni.sidero.dev/machine: 5aa03ceb-d97e-6b59-d293-9c1708fadaa8
+        omni.sidero.dev/machine: 7a5ef524-f5d8-4d58-b542-b89800a2ab38 #UUID From node log
     annotations:
         description: add vip to ControlPlane node
         name: add vip
