--- a/patches/vip-k8s-node-1.yaml
+++ b/patches/vip-k8s-node-1.yaml
@@ -6,7 +6,7 @@ metadata:
     type: ConfigPatches.omni.sidero.dev
     id: 500-761561d3-6ea2-4dc0-939a-c743cde0a345
     labels:
-        omni.sidero.dev/machine: 5b7675ab-9294-23a3-0f18-742476129205
+        omni.sidero.dev/machine: 4c4c4544-0035-3810-8038-b4c04f444d33 #UUID From node log
     annotations:
         description: Add VIP IP to Control Planes
         name: add-vip
