--- a/patches/outputpatch.yaml
+++ b/patches/outputpatch.yaml
@@ -5,8 +5,8 @@ metadata:
     version: 2
     owner:
     phase: running
-    created: 2025-03-09T19:10:48Z
-    updated: 2025-03-12T23:00:15Z
+    # created: 2025-03-09T19:10:48Z
+    # updated: 2025-03-12T23:00:15Z
     labels:
         omni.sidero.dev/machine: 5b7675ab-9294-23a3-0f18-742476129205
     annotations:
