--- a/patches/vip-k8s-node-5.yaml
+++ b/patches/vip-k8s-node-5.yaml
@@ -6,7 +6,7 @@ metadata:
     type: ConfigPatches.omni.sidero.dev
     id: 500-d62eae71-3c4b-42dc-a33a-359aa5ffd1c1
     labels:
-        omni.sidero.dev/machine: 4c4c4544-0056-3510-8033-b2c04f335133
+        omni.sidero.dev/machine: 4c4c4544-0056-3510-8033-b2c04f335133 #UUID From node log
     annotations:
         description: add vip to ControlPlane node
         name: add vip
